--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Movement 3D</title>
     <style>
       body {
+        font-family: Arial, Helvetica, sans-serif;
         margin: 0;
         background-color: black;
         color: white;
