Add inventory to the screen, remove screen border

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
         background-color: black;
         color: white;
       }
+      .game-container {
+        display: flex;
+        gap: 0.5rem;
+      }
+      .inventory {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 0.5rem;
+        width: 400px;
+        height: 600px;
+      }
+      .item-box {
+        background-color: #333;
+      }
     </style>
   </head>
   <body>
