--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
         background-color: black;
         color: white;
       }
+      .game-container {
+        display: flex;
+        gap: 0.5rem;
+      }
+      .inventory {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(7, 1fr);
+        gap: 0.5rem;
+        width: 320px;
+        height: 550px;
+      }
+      .item-box {
+        background-color: #333;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 12px;
+      }
     </style>
   </head>
   <body>
